--- a/src/style.css
+++ b/src/style.css
@@ -1,20 +1,39 @@
-body{
+body {
     display: flex;
     justify-content: center;
+    background-color: #e0e0e0;
+    gap: 10px;
 }
 
 #canvas {
-    border: 1px solid black;
     width: 600px;
     height: 600px;
+    border-radius: 50px;
+    background: linear-gradient(145deg, #cacaca, #f0f0f0);
+    box-shadow: 20px 20px 60px #bebebe,
+        -20px -20px 60px #ffffff;
 }
 
-.ButtonGroup{
+.ButtonGroup {
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
 
-button{
-    width: 100px;
-    height: 20px;
+button {
+    border: 2px dotted rgb(46, 46, 46);
+    margin: 3px;
+    width: 150px;
+    height: 30px;
+    border-radius: 2px;
+    background: linear-gradient(145deg, #f0f0f0, #cacaca);
+    box-shadow: 20px 20px 60px #bebebe,
+        -20px -20px 60px #ffffff;
+}
+
+button:hover {
+    border-radius: 2px;
+    background: linear-gradient(145deg, #cacaca, #f0f0f0);
+    box-shadow: 20px 20px 60px #bebebe,
+        -20px -20px 60px #ffffff;
 }
